--- a/ExperimentalProbability.UI/Properties/Resources.resx
+++ b/ExperimentalProbability.UI/Properties/Resources.resx
@@ -150,8 +150,8 @@
   <data name="Color_Yellow" xml:space="preserve">
     <value>Yellow</value>
   </data>
-  <data name="Condition_NotAvailable" xml:space="preserve">
-    <value>N/A</value>
+  <data name="Default_ColoredBalls_ColorNumber" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="Default_ColoredBalls_NumberOfColors" xml:space="preserve">
     <value>3</value>
@@ -168,26 +168,23 @@
   <data name="Default_Pool_Size_Dice" xml:space="preserve">
     <value>6</value>
   </data>
+  <data name="Default_Selection_ColoredBalls" xml:space="preserve">
+    <value>Choose a color</value>
+  </data>
+  <data name="Default_Selection_Dice" xml:space="preserve">
+    <value>Choose a side</value>
+  </data>
+  <data name="Default_Selection_Type" xml:space="preserve">
+    <value>Choose a type</value>
+  </data>
   <data name="Default_Simulations" xml:space="preserve">
     <value>1000000</value>
   </data>
   <data name="Dice_Condition_First" xml:space="preserve">
     <value>Roll a six</value>
   </data>
-  <data name="Header1_Description_Calculation" xml:space="preserve">
-    <value>Calculation description</value>
-  </data>
-  <data name="Header1_Results" xml:space="preserve">
-    <value>Last calculation results</value>
-  </data>
   <data name="Header1_Settings_Calculation" xml:space="preserve">
     <value>Calculation settings</value>
-  </data>
-  <data name="Header2_Description_Condition" xml:space="preserve">
-    <value>Description of calculation condition:</value>
-  </data>
-  <data name="Header2_Description_Type" xml:space="preserve">
-    <value>Description of calculation type:</value>
   </data>
   <data name="Header2_Settings_Condition" xml:space="preserve">
     <value>Condition settings</value>
@@ -195,20 +192,23 @@
   <data name="Header2_Settings_Type" xml:space="preserve">
     <value>Type settings</value>
   </data>
-  <data name="Header3_Settings_Pool" xml:space="preserve">
-    <value>Pool settings</value>
-  </data>
   <data name="MainWindow_Title" xml:space="preserve">
     <value>Experimental Probability</value>
+  </data>
+  <data name="NotAvailable" xml:space="preserve">
+    <value>N/A</value>
   </data>
   <data name="String_Times" xml:space="preserve">
     <value>times.</value>
   </data>
-  <data name="Text_ColoredBalls_Check_EqualNumberOfColors" xml:space="preserve">
+  <data name="Text_Check_ColoredBalls_EqualNumberOfColors" xml:space="preserve">
     <value>Equal number of colors</value>
   </data>
-  <data name="Text_ColoredBalls_Color" xml:space="preserve">
-    <value>Color number</value>
+  <data name="Text_Check_ColoredBalls_ManualColorSelection" xml:space="preserve">
+    <value>Select colors manually</value>
+  </data>
+  <data name="Text_ColoredBalls_ColorNumber" xml:space="preserve">
+    <value>Color n: </value>
   </data>
   <data name="Text_ColoredBalls_NumberOfColors" xml:space="preserve">
     <value>Number of colors:</value>
@@ -229,22 +229,16 @@
     <value>Side number</value>
   </data>
   <data name="Text_Pool_Size_ColoredBalls" xml:space="preserve">
-    <value>Amount of balls:</value>
+    <value>Number of balls:</value>
   </data>
   <data name="Text_Pool_Size_Dice" xml:space="preserve">
-    <value>Amount of sides:</value>
+    <value>Number of sides:</value>
   </data>
   <data name="Text_Probability" xml:space="preserve">
     <value>Probability of condition is</value>
   </data>
-  <data name="Text_Selection_ColoredBalls_Color" xml:space="preserve">
-    <value>Choose a color</value>
-  </data>
-  <data name="Text_Selection_Dice_Side" xml:space="preserve">
-    <value>Choose a side</value>
-  </data>
   <data name="Text_Selection_Type" xml:space="preserve">
-    <value>Choose a type</value>
+    <value>Type:</value>
   </data>
   <data name="Text_Simulations" xml:space="preserve">
     <value>Amount of simulations:</value>
