--- a/ExperimentalProbability.UI/Properties/Types/Dice/Resources.resx
+++ b/ExperimentalProbability.UI/Properties/Types/Dice/Resources.resx
@@ -117,31 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Button_RunCalculation_Content" xml:space="preserve">
-    <value>Run calculation</value>
+  <data name="Settings_ComboBox_SideSelection_Text" xml:space="preserve">
+    <value>Choose a side</value>
   </data>
-  <data name="NotAvailable" xml:space="preserve">
-    <value>N/A</value>
+  <data name="Settings_IntegerUpDown_NumberOfDiceRolls_Text" xml:space="preserve">
+    <value>1</value>
   </data>
-  <data name="Settings_ComboBox_TypeSelection_Text" xml:space="preserve">
-    <value>Choose a type</value>
-  </data>
-  <data name="Settings_IntegerUpDown_SimulationsToRun_Text" xml:space="preserve">
-    <value>1000000</value>
-  </data>
-  <data name="Settings_TextBlock_Header1_Text" xml:space="preserve">
-    <value>Calculation settings</value>
+  <data name="Settings_IntegerUpDown_NumberOfSides_Text" xml:space="preserve">
+    <value>6</value>
   </data>
   <data name="Settings_TextBlock_Header2_Text" xml:space="preserve">
-    <value>Condition settings</value>
+    <value>Dice settings</value>
   </data>
-  <data name="Settings_TextBlock_SimulationsToRun_Text" xml:space="preserve">
-    <value>Number of simulations:</value>
+  <data name="Settings_TextBlock_NumberOfDiceRolls_Text" xml:space="preserve">
+    <value>Number of dice rolls:</value>
   </data>
-  <data name="Settings_TextBlock_TypeSelection_Text" xml:space="preserve">
-    <value>Type:</value>
+  <data name="Settings_TextBlock_NumberOfSides_Text" xml:space="preserve">
+    <value>Number of sides:</value>
   </data>
-  <data name="Window_MainWindow_Title" xml:space="preserve">
-    <value>Experimental Probability</value>
+  <data name="TypeName" xml:space="preserve">
+    <value>Pool: Dice</value>
   </data>
 </root>
