--- a/ExperimentalProbability.UI/Properties/LocalizableResources/GeneralResources.resx
+++ b/ExperimentalProbability.UI/Properties/LocalizableResources/GeneralResources.resx
@@ -174,6 +174,9 @@
   <data name="Label_TypeSelection_Content" xml:space="preserve">
     <value>Type:</value>
   </data>
+  <data name="MessageBox_Caption" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="String_ConditionInfo" xml:space="preserve">
     <value>The condition you are looking for is that</value>
   </data>
