--- a/ExperimentalProbability.Contracts/Properties/ColoredBallsResources.resx
+++ b/ExperimentalProbability.Contracts/Properties/ColoredBallsResources.resx
@@ -117,82 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BagOfColoredBalls_Condition_First" xml:space="preserve">
-    <value>Tři rozdílné kuličky vytažené po sobě</value>
+  <data name="ColorPicker_AvailableColorsHeader" xml:space="preserve">
+    <value>Available colors</value>
   </data>
-  <data name="BagOfColoredBalls_Condition_Second" xml:space="preserve">
-    <value>Tři stejné kuličky vytažené po sobě</value>
+  <data name="ColorPicker_NoAvailableColorsHeader" xml:space="preserve">
+    <value>No colors available</value>
   </data>
-  <data name="Button_Run" xml:space="preserve">
-    <value>Spustit výpočet</value>
+  <data name="ComboBox_ColorSelection_Text" xml:space="preserve">
+    <value>Choose a color</value>
   </data>
-  <data name="Description_BagOfColoredBalls_Condition_First" xml:space="preserve">
-    <value>Tento jev je pravdivý pokud všechny tři vytažené kuličky mají jinou barvu.</value>
+  <data name="ElementName_ColorCount" xml:space="preserve">
+    <value>Color Count</value>
   </data>
-  <data name="Description_BagOfColoredBalls_Condition_Second" xml:space="preserve">
-    <value>Tento jev je pravdivý pokud všechny tři vytažené kuličky mají stejnou barvu.</value>
+  <data name="ElementName_ColorCountSum" xml:space="preserve">
+    <value>the sum of all Color Counts</value>
   </data>
-  <data name="Description_DiceRoll" xml:space="preserve">
-    <value>Tento typ kalkulace pracuje s šestistrannou kostkou.</value>
+  <data name="ElementName_ConditionColor" xml:space="preserve">
+    <value>Condition Color</value>
   </data>
-  <data name="Description_DiceRoll_Condition_First" xml:space="preserve">
-    <value>Tento jev je pravdivý pokud byla kostka hozena jednou a padla strana, na které je číslo šest.</value>
+  <data name="ElementName_NumberOfBalls" xml:space="preserve">
+    <value>Number of balls</value>
   </data>
-  <data name="Description_DiceRoll_Condition_Second" xml:space="preserve">
-    <value>Tento jev je pravdivý pokud byla kostka hozena dvakrát a obě padlé strany na sobě mají číslo šest.</value>
+  <data name="ElementName_NumberOfColors" xml:space="preserve">
+    <value>Number of Colors</value>
   </data>
-  <data name="Desription_BagOfColoredBalls" xml:space="preserve">
-    <value>Tento typ kalkulace pracuje se sáčkem, který je naplněn devíti barevnými kuličkami.</value>
+  <data name="ElementName_NumberOfTakenBalls" xml:space="preserve">
+    <value>Number of Taken Balls</value>
   </data>
-  <data name="DiceRoll_Condition_First" xml:space="preserve">
-    <value>Padne šestka</value>
+  <data name="ElementName_PoolColor" xml:space="preserve">
+    <value>Pool Color</value>
   </data>
-  <data name="DiceRoll_Condition_Second" xml:space="preserve">
-    <value>Padnou dvě šestky po sobě</value>
+  <data name="Label_ColorCount_Content" xml:space="preserve">
+    <value>Color count:</value>
   </data>
-  <data name="Header_Description" xml:space="preserve">
-    <value>Popis výpočtu</value>
+  <data name="Label_ColorPicker_Content" xml:space="preserve">
+    <value>Choose a color:</value>
   </data>
-  <data name="Header_Description_Condition" xml:space="preserve">
-    <value>Popis jevu kalkulace:</value>
+  <data name="Label_NumberOfBalls_Content" xml:space="preserve">
+    <value>Number of balls:</value>
   </data>
-  <data name="Header_Description_Type" xml:space="preserve">
-    <value>Popis typu kalkulace:</value>
+  <data name="Label_NumberOfColors_Content" xml:space="preserve">
+    <value>Number of colors:</value>
   </data>
-  <data name="Header_Results" xml:space="preserve">
-    <value>Výsledky posledního výpočtu</value>
+  <data name="Label_NumberOfTakenBalls_Content" xml:space="preserve">
+    <value>Number of taken balls:</value>
   </data>
-  <data name="Header_Settings" xml:space="preserve">
-    <value>Nastavení výpočtu</value>
+  <data name="String_BeforeColorNamePlural" xml:space="preserve">
+    <value>of these balls are</value>
   </data>
-  <data name="String_Times" xml:space="preserve">
-    <value>krát.</value>
+  <data name="String_BeforeColorNameSingular" xml:space="preserve">
+    <value>of these balls is</value>
   </data>
-  <data name="Text_Condition" xml:space="preserve">
-    <value>Jev:</value>
+  <data name="String_CalculationAction" xml:space="preserve">
+    <value>ball taken is</value>
   </data>
-  <data name="Text_ConditionsMet" xml:space="preserve">
-    <value>Jev byl splněn</value>
+  <data name="String_PoolItem" xml:space="preserve">
+    <value>balls,</value>
   </data>
-  <data name="Text_Probability" xml:space="preserve">
-    <value>Pravděpodobnost jevu je</value>
+  <data name="String_TypeInfo" xml:space="preserve">
+    <value>bag of colored balls, that can have from nine to a hundred balls.</value>
   </data>
-  <data name="Text_Simulations" xml:space="preserve">
-    <value>Počet simulací:</value>
-  </data>
-  <data name="Text_SimulationsRun" xml:space="preserve">
-    <value>Simulace proběhla</value>
-  </data>
-  <data name="Text_Type" xml:space="preserve">
-    <value>Typ:</value>
-  </data>
-  <data name="Type_BagOfColoredBalls" xml:space="preserve">
-    <value>Sáček s barevnými kuličkami</value>
-  </data>
-  <data name="Type_DiceRoll" xml:space="preserve">
-    <value>Hod kostkou</value>
-  </data>
-  <data name="Type_Empty" xml:space="preserve">
-    <value>Žádný</value>
+  <data name="String_TypeName" xml:space="preserve">
+    <value>Pool: ColoredBalls</value>
   </data>
 </root>
