czech names of calculations updated

--- a/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/ColoredBalls/Resources.cs.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/ColoredBalls/Resources.cs.resx
@@ -139,7 +139,7 @@
     <value>Počet barvy:</value>
   </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Výpočet s osudím: Pytlík s barevnými kuličkami</value>
+    <value>Výpočet s Osudím: Pytlík s barevnými kuličkami</value>
   </data>
   <data name="ElementName_ConditionColor" xml:space="preserve">
     <value>Barva v Jevu</value>
