--- a/ExperimentalProbability.Contracts/Properties/Resources/Shell/Resources.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Shell/Resources.resx
@@ -129,11 +129,11 @@
   <data name="Header" xml:space="preserve">
     <value>Menu</value>
   </data>
+  <data name="PiCalc" xml:space="preserve">
+    <value>x^2 + y^2 = 1</value>
+  </data>
   <data name="PoolCalcs" xml:space="preserve">
     <value>Pool Calculations:</value>
-  </data>
-  <data name="QuarterCircleCalc" xml:space="preserve">
-    <value>x^2 + y^2 = 1</value>
   </data>
   <data name="Tutorial" xml:space="preserve">
     <value>Tutorial</value>
